# open_agb_firm

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml
arm11/: CMakeLists.txt
arm9/: CMakeLists.txt
cmake/: DevkitARM.cmake
include/arm11/: cheats.h  config.h  oaf_osd.h
source/arm11/: cheats.c  config.c  oaf_osd.c  oaf_video.c  open_agb_firm.c
